--- a/src/componets/Header/Header.scss
+++ b/src/componets/Header/Header.scss
@@ -27,6 +27,11 @@
         margin-left: 18px;
         margin-top: 5px;
         cursor: pointer;
+        border: 2px solid #fff;
+
+        &:hover {
+          border: 2px solid #0770b0;
+        }
       }
       span {
         font-weight: bold;
@@ -44,6 +49,7 @@
       margin-right: 10px;
       padding: 5px;
       cursor: pointer;
+      transition: 0.2s ease-in background-color, 0.5s ease-in border-radius;
 
       span {
         font-size: 20px;
@@ -52,12 +58,17 @@
         display: block;
       }
       &-icon {
-        margin-right: 8px;
+        margin-right: 15px;
       }
 
       &:hover {
         background-color: #9dd8fc;
         border-radius: 10px;
+        transition: 0.2s ease-in background-color;
+      }
+
+      &:active {
+        background-color: #78c7fa;
       }
     }
   }
