--- a/src/componets/Navbar/Nav.scss
+++ b/src/componets/Navbar/Nav.scss
@@ -15,10 +15,18 @@
       margin: 25px 0;
       cursor: pointer;
       padding: 5px;
+      transition: 0.2s ease-in background-color, 0.5s ease-in border-radius,
+        0.5s ease-in filter;
 
       &:hover {
         background-color: #9dd8fc;
         border-radius: 10px;
+        filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+        transition: 0.2s ease-in background-color, 0.2s ease-in filter;
+      }
+      &:active {
+        background-color:#78C7FA;
+        transition: 0s ease;
       }
     }
 
@@ -34,9 +42,19 @@
     }
   }
 
+  &__aditional {
+    text-align: center;
+    margin-top: 110px;
+    div {
+      font-weight: bold;
+      font-size: 24px;
+      line-height: 28px;
+      color: #ffffff;
+      margin-bottom: 170px;
+    }
+  }
+
   hr {
-    border: none;
-    height: 2px;
-    background-color: #1da1f2;
+    margin-top: 58px;
   }
 }
