Use React-router and fix some other not big problems

--- a/src/componets/Navbar/Nav.scss
+++ b/src/componets/Navbar/Nav.scss
@@ -14,7 +14,7 @@
       align-items: center;
       margin: 25px 0;
       cursor: pointer;
-      padding: 5px;
+      padding: 7px;
       transition: 0.2s ease-in background-color, 0.5s ease-in border-radius,
         0.5s ease-in filter;
 
@@ -25,7 +25,7 @@
         transition: 0.2s ease-in background-color, 0.2s ease-in filter;
       }
       &:active {
-        background-color:#78C7FA;
+        background-color: #78c7fa;
         transition: 0s ease;
       }
     }
@@ -39,6 +39,10 @@
       color: floralwhite;
       text-decoration: none;
       font-size: 20px;
+    }
+
+    .active {
+      color: #0770b0;
     }
   }
 
@@ -55,6 +59,6 @@
   }
 
   hr {
-    margin-top: 58px;
+    margin-top: 35px;
   }
 }
