--- a/src/componets/Profile/MyPosts/Post/Post.scss
+++ b/src/componets/Profile/MyPosts/Post/Post.scss
@@ -12,11 +12,11 @@
   }
 
   &__content {
+    width: 300px;
     font-weight: bold;
     font-size: 16px;
     line-height: 19px;
     color: #0770b0;
-    margin-left: -220px;
   }
 
   &__date {
