--- a/src/componets/Navbar/Nav.scss
+++ b/src/componets/Navbar/Nav.scss
@@ -43,6 +43,10 @@
 
     .active {
       color: #0770b0;
+      background-color: #9dd8fc;
+      border-radius: 10px;
+      filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+      transition: 0.2s ease-in background-color, 0.2s ease-in filter;
     }
   }
 
