--- a/src/componets/Profile/Profile.scss
+++ b/src/componets/Profile/Profile.scss
@@ -128,6 +128,7 @@
         box-sizing: border-box;
         border-radius: 10px;
         padding-left: 20px;
+        padding-right: 20px;
         color: #0770b0;
         font-size: 18px;
 
